--- a/react-app/src/components/AllInterviewContainer/app.css
+++ b/react-app/src/components/AllInterviewContainer/app.css
@@ -290,7 +290,96 @@
 .allInt-loc-type-cont p {
     letter-spacing: 1px;
 }
+.int-search-cont {
+    /* background-color: red; */
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+    margin: auto;
+    height: 160px;
+    gap: 20px;
+    margin-top: 17px;
+    border-radius: 7px;
+}
+.int-search-body {
+    /* background-color: green; */
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 20px;
+    /* flex-wrap: wrap; */
+}
+.int-search-body label {
+    /* background-color: purple; */
+    font-size: 18px;
+    /* padding: 4px 0px 4px 0px; */
+    /* background-color: none; */
+    width: 80px;
+    text-align: center;
+    display: inline-block;
+    height: 23px;
+}
+.int-search-body select {
+    height: 23px;
+    outline: none;
+    font-size: 18px;
+    padding:1px;
+    background-color: #4362ee1c;
+    border:#4362ee1c ;
 
+}
+.int-search-cont p {
+    font-size: 32px;
+    padding: 5px;
+    background-color: #4361ee;
+    color: white;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+.int-search-body input {
+    height: 23px;
+    outline: none;
+    font-size: 18px;
+    padding: 2px;
+    background-color: #4362ee1c;
+    border:#4362ee1c ;
+
+}
+.int-search-body div {
+    padding: 3px;
+    display: flex
+}
+.clear-search-btn {
+    width: 150px;
+    margin: auto;
+    font-size: 18px;
+    padding: 3px;
+    height: 30px;
+    display: inline-block;
+    border: 1px solid white;
+    background-color: #4361ee;
+    margin-bottom: 15px;
+    color: white;
+    transition: .3s;
+}
+.clear-search-btn:hover {
+    background-color: white;
+    color: #4361ee;
+    border-color: #4361ee;
+    cursor: pointer;
+}
+@media screen and (max-width: 1180px) {
+    .int-search-cont {
+        height: 220px;
+        /* height: 100%; */
+    }
+    .int-search-body {
+        flex-direction: column;
+        align-items: sr;
+        /* height: 100%; */
+    }
+}
 
 @media screen and (max-width: 768px) {
     .allInt-container {
