--- a/react-app/src/components/UserProfile/app.css
+++ b/react-app/src/components/UserProfile/app.css
@@ -1,36 +1,125 @@
 #user-profile {
     /* background-color: red; */
+    background-color: transparent;
     display: flex;
-    width: 70vw;
+    width: 40vw;
     /* height: inherit; */
-    height: 500px;
-    flex-direction: column;
+    height: 600px;
+    flex-direction:row;
     margin: auto;
-    margin-top: 20px;
-    justify-content: center;
-    align-items: center;
+    margin-top: 40px;
+    
+    /* justify-content: space-around; */
+    /* align-items: center; */
     gap: 20px;
     /* justify-content: space-around; */
 }
-.user-profile-info {
-    flex: 1;
+.edit-profile-pic-btn {
+    width: 100%;
+    /* background-color: blue; */
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;
-    padding: 1em;
+}
+.image-upload-cont {
+    /* background-color: red; */
+    height: 80px;
+    width: 250px;
+    padding: 5px;
+
+    /* display: flex;
+    flex-direction: column; */
+    
+
+}
+.edit-profile-pic-btn {
+    /* background-color: red; */
+    width: 60px;
+    font-size: 15px;
+    margin: auto;
+    padding: 4px;
+    border: none;
+    background-color: #4361ee;
+    color: white;
+    letter-spacing: 1px;
+    border: 1px solid white;
+    transition: .3s;
+
+    /* justify-self: start; */
+    /* align-self: flex-start; */
+}
+.edit-pic-form-cont {
+    /* background-color: teal; */
+    height: 100%;
+    
+}
+.edit-pic-form-cont form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 10px;
+    align-items: center;
+
+    
+}
+.edit-pic-form-cont form input {
+    /* background-color: green; */
+    font-size: 16px;
+    width: 90%;
+    margin-top: 10px;
+    height: 25px;
+}
+.edit-pic-form-cont form button {
+    background-color: #4361ee;
+    padding: 2px;
+    font-size: 15px;
+    width: 100px;
+    border: none;
+    color: white;
+    letter-spacing: 1px;
+    height: 26px;
+    border: 1px solid white;
+    transition: .3s;
+
+}
+.edit-pic-form-cont form button:hover , .edit-profile-pic-btn:hover{
+    background-color: white;
+    color: #4361ee;
+    border-color: #4361ee;
+    cursor: pointer;
+}
+/* .edit-profile-pic-btn:hover {
+    color: #4361ee;
+    border-color: #4361ee;
+    cursor: pointer;
+} */
+.pic-form-btns {
+    display: flex;
+    gap: 10px;
+}
+
+.user-profile-info {
+    /* flex: 1; */
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    /* flex-wrap: wrap; */
+    /* padding: 1em; */
     background-color: white;
     /* background-color: blue; */
-    height: 190px;
+    /* height: 190px; */
     border-radius: 5px;
     border-bottom: 2px solid #4361ee;
 
+}
+.user-profile-info div {
+    width: 100%;
 }
 .user-profile-info label {
     /* background-color: green; */
     display: inline-block;
     width: 80px;
     letter-spacing: 1px;
-    font-size: 0.8em;
+    font-size: 0.9em;
     color: #4361ee;
     font-weight: 500;
     text-align: center;
@@ -57,7 +146,16 @@
     width: 350px;
     vertical-align: middle;
 }
-.user-bio-label {
+.user-profile-img {
+    /* background-color: red; */
+    background-color: white;
+    /* background-color: blue; */
+    display: flex;
+    flex-direction: column;
+    height: 300px;
+    align-items: center;
+    /* margin-top: 66px; */
+
 
 }
 
@@ -65,7 +163,7 @@
 
 
 .user-profile-img img {
-    width: 200px;
+    width: 250px;
 }
 .user-info-edit-btn {
     border: none;
@@ -92,10 +190,17 @@
     color: white;
     
 }
-
-@media screen and (max-width:853px)  {
+@media screen and (max-width:650px){
     #user-profile {
-        /* background-color: red; */
+        width: 80vw;
+    }
+}
+
+@media screen and (max-width:1030px)  {
+    #user-profile {
+        flex-direction: column;
+        height: 100%;
+        
     }
     .user-profile-info {
         flex-direction: column;
