--- a/react-app/src/components/SingleUser/app.css
+++ b/react-app/src/components/SingleUser/app.css
@@ -15,3 +15,101 @@
     font-size: 10px;
     font-weight: 500;
 }
+.single-usr-prfile-cont {
+    background-color: red;
+    width: 600px;
+    margin-top: 20px;
+}
+.single-user-name {
+    font-weight: 600;
+    background-color: #4361ee;
+    color: white;
+    width: 80%;
+    margin: auto;
+    margin-bottom: 10px;margin-top: 5px;
+
+
+}
+.single-usr-prfile-cont img {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    
+}
+.single-usr-prfile-cont {
+    display: flex;
+    flex-direction: row;
+    margin: auto;
+    /* margin-top: 20px; */
+    background-color: #4362ee1c;
+    /* background-color: teal; */
+    /* margin-top: 100px; */
+}
+.single-user-upper {
+    /* background-color: blue; */
+    text-align: center;
+    padding: 3px;
+}
+.single-user-upper p {
+    font-size: 15px;
+    letter-spacing: 1px;
+}
+.single-user-btm {
+    /* background-color: green; */
+    display: flex;
+    flex-direction: column;
+    /* justify-content: space-between; */
+    gap: 20px;
+    margin-top: 10px;
+}
+.single-user-btm p {
+    font-size: 15px;
+    letter-spacing: 1px;
+    text-align: center;
+}
+.single-user-career  {
+    font-weight: 600;
+    background-color: #4361ee;
+    color: white;
+    /* width: fit-content; */
+    width: 150px;
+    /* margin-right: 50%; */
+    margin: auto;
+}
+.single-user-bio {
+    /* background-color: #4361ee; */
+    color:#8d99ae;
+}
+.single-user-main-cont {
+    /* background-color: red; */
+    padding: 15px;
+    background-color: white;
+    width: 90vw;
+    margin: auto;
+    margin-top: 30px;
+    height: 800px;
+}
+.single {
+    background-color: #4362ee1c;
+}
+@media screen and (max-width:700px ) {
+    .single-usr-prfile-cont {
+        background-color: red;
+        flex-direction: column;
+        width: 80%;
+
+    }
+    .single-user-name {
+        width: 150px;
+
+    }
+    .single-user-bio {
+        width: 90%;
+    }
+    .single {
+        width: 90%;
+    }
+    .single div {
+        width: 90%;
+    }
+}
