--- a/react-app/src/components/FindJobs/app.css
+++ b/react-app/src/components/FindJobs/app.css
@@ -2,6 +2,18 @@
    display: flex;
    flex-direction: column;
    justify-content: center;
+   /* background-color: red; */
+}
+.find-job-heading {
+    background-color: #4361ee;
+    color: white;
+    padding: 4px;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+}
+.article-image {
+    width: 200px;
+    height: 200px;
 }
 .jobs-btns {
     /* background-color: #4361ee; */
@@ -12,11 +24,81 @@
     display: flex;
     justify-content: space-evenly;
 }
+.single-news-article {
+    /* background-color: blue; */
+    /* background-color: white; */
+     /* background-color: #4362ee1c; */
+    /* box-shadow: rgba(67, 98, 238, 0.4) 5px 5px, rgba(67, 98, 238, 0.3) 10px 10px;  */
+    
+    width: 600px;
+    margin: auto;
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border-radius: 5px;
+    /* border: 3px solid #4361ee; */
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;    
+}
+.news-right-cont {
+    /* background-color: teal; */
+    display: flex;
+    flex-direction: column;
+
+    flex: 1;
+    /* justify-content: space-between; */
+    gap: 50%;
+    /* margin: auto; */
+    /* height: 100%; */
+
+}
+.news-title  p{
+    /* background-color: pink;
+    font-size: 15px;
+    font-weight: 600;
+    text-align: center;
+    height: 45px;
+    padding: 3px; */
+}
+.news-title-heading {
+    /* background-color: pink; */
+    font-size: 15px;
+    font-weight: 600;
+    text-align: center;
+    height: 45px;
+    padding: 3px; 
+    /* background-color: #4362ee1c; */
+    display: flex;
+    margin-right: 5px;
+    justify-content: center;
+    align-items: center;
+    width: fit-content;
+    margin: auto;
+}
+.news-source {
+    text-align: center;
+    font-size: 15px;
+}
+
+.news-title {
+    margin-top: 10px;
+    
+}
+.news-container {
+    /* background-color: red; */
+    width: 95%;
+    margin: auto;
+    margin-top: 30px;
+    /* margin: auto; */
+}
+.jobs-btns {
+    width: 100%;
+}
 .jobs-btns button {
-    width: 130px;
-    font-size: 13px;
+    width: 160px;
+    font-size: 15px;
     letter-spacing: 1px;
-    height: 20px;
+    height: 35px;
     border: none;
     cursor: pointer;
     padding: 2px;
@@ -26,7 +108,7 @@
 }
 .jobs-btns button:hover {
     background-color: transparent;
-    color: #4361ee;
+    color: rgb(67, 97, 238);
     border: 2px solid #4361ee;
 
 }
@@ -39,4 +121,38 @@
 .notClicked {
     background-color: #4361ee;
     color: white;
+}
+.news-container a {
+    text-decoration: none;
+    color: black;
+}
+.news-container a:visited{
+color: none;
+}
+.find-job-main-cont {
+    /* background-color: teal; */
+    background-color: white;
+    width: 85%;
+    margin: auto;
+    margin-top: 25px;
+    height: 100%;
+    margin-bottom: 20px;
+}
+@media screen and (max-width: 905px) {
+    .single-news-article{
+        width: 90%;
+    }
+    .jobs-btns {
+        flex-direction: column;
+        gap: 10px;
+        justify-content: center;
+        align-items: center;
+    }
+}
+@media screen and (max-width: 500px) {
+    .single-news-article{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 }
