--- a/react-app/src/components/AllInterviewContainer/app.css
+++ b/react-app/src/components/AllInterviewContainer/app.css
@@ -308,6 +308,7 @@
     flex-direction: row;
     justify-content: center;
     gap: 20px;
+    /* width: 100%; */
     /* flex-wrap: wrap; */
 }
 .int-search-body label {
@@ -369,21 +370,77 @@
     border-color: #4361ee;
     cursor: pointer;
 }
-@media screen and (max-width: 1180px) {
+@media screen and (max-width: 1600px) {
+    .int-search-body {
+        flex-direction: column;
+        /* display: inlin */
+    }
     .int-search-cont {
-        height: 220px;
-        /* height: 100%; */
+        height: fit-content;
+        width: 60%;
     }
     .int-search-body {
         flex-direction: column;
-        align-items: sr;
+        background-color: red;
+        
+        /* justify-content: center; */
+        /* align-items: center; */
+        /* background-color: red; */
         /* height: 100%; */
     }
 }
+@media screen and (max-width: 480px) {
+    .int-search-body label  {
+        padding: 0px;
+        width: fit-content;
+    }
+    /* .int-search-body  input {
+        width: 80%;
+    } */
+    .int-search-body div {
+        display: flex;
+        flex-direction: column;
+    }
+        
+    
 
-@media screen and (max-width: 768px) {
+    .allInt-column {
+        width: 95%;
+        height: 100%;
+       
+    }
+    .allInt-top-cont {
+        width: 100%;
+
+    }
+    .allInt-btm-container {
+        display: flex;
+        flex-direction: column;
+        /* width: 70%; */
+        justify-content: center;
+
+    }
+    .allInt-btm-bttns {
+        /* background-color: red; */
+        width: 100%;
+    }
+    .allInt-btm-left-cont {
+        width: 100%;
+
+    }
+    .allInt-btm-right-container {
+        width: 70%;
+    }
+}
+/* @media screen and (max-width: 1180px) {
+    .int-search-cont {
+        height: 220px;
+    }
+   
+} */
+
+/* @media screen and (max-width: 768px) {
     .allInt-container {
       grid-template-columns: 1fr;
-      /* margin-top: 40px; */
     }
-  }
+  } */
