--- a/react-app/src/components/CreateFavListModal/app.css
+++ b/react-app/src/components/CreateFavListModal/app.css
@@ -97,3 +97,10 @@
     text-align: center;
     margin-bottom: 10px;
 }
+@media screen and (max-width: 400px) {
+    .cre-fav-cont {
+        width: 95%;
+        margin: auto;
+        margin-top: 20px;
+    }
+}
