--- a/react-app/src/components/LandingPage/app.css
+++ b/react-app/src/components/LandingPage/app.css
@@ -38,11 +38,12 @@
     height: 45vh;
 }
 .heading-landing-page {
-    color: #e5e5e5;
+    color: #4361ee;
     letter-spacing: 2px;
     /* background-color: white; */
     font-family: 'Pacifico', cursive;
     width: 100%;
+    /* display: inline-block; */
 }
 .card-social {
     border-top: 4px solid #4361ee;
@@ -52,6 +53,34 @@
     height: 85px;
     /* color: #fcbf49; */
 }
+.logo-landing-page {
+    width: 37px;
+    /* display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center; */
+    height: 37px;
+    background-color: #4361ee;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 20px;
+    border-radius: 3px;
+}
+.logo-landing-page p {
+    /* background-color: red; */
+    font-size: 24px;
+    font-weight: 600;
+    width: fit-content;
+    margin: auto;
+}
+.land-heading-logo {
+    display: flex;
+    gap: 6px;
+    /* flex-direction: row; */
+    justify-content: start;
+    align-items: center;
+}
 .card-work {
     border-top: 4px solid #fcbf49;
 }
@@ -60,7 +89,8 @@
     height: 100vh;
     width: 100vw;
     margin: auto;
-    background-image:url('../../utilities/background .jpg') ;
+    /* background-image:url('../../utilities/background .jpg') ; */
+    background-color: white;
     /* background-color: red; */
     background-repeat: no-repeat;
     /* background-position: center; */
@@ -70,7 +100,8 @@
     align-items: center; */
     /* background-color: #0093E9;
 background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%); */
-color: #e5e5e5;
+/* color: #e5e5e5; */
+color: white;
 
 }
 
@@ -129,11 +160,13 @@ color: #e5e5e5;
 }
 
 .landing-heading {
-    font-size: 40px;
+    /* font-size: 40px; */
+    font-size: 3rem;
     /* background-color: red; */
     font-weight: 500;
     letter-spacing: 1px;
-    font-family: 'Pacifico', cursive;
+    /* font-family: 'Pacifico', cursive; */
+    color: #4361ee;
 }
 
 .landing-heading span {
@@ -146,41 +179,47 @@ color: #e5e5e5;
     display: flex;
     justify-content: space-between;
     margin: auto;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     margin-top: 15px;
 }
+
 
 .landing-btns button {
     width: 115px;
     height: 35px;
     font-size: 16px;
     border: none;
-    /* background-color: #4361ee; */
-    background-color: black;
-    border: .5px solid #e5e5e5;
+    background-color: #4361ee;
+    /* background-color: black; */
+
+    border: 1px solid white;
     
     letter-spacing: 1px;
     border-radius: 3px;
-    font-family: 'Pacifico', cursive;
+    /* font-family: 'Pacifico', cursive; */
     margin: auto;
     transition: .3s;
-    color: #e5e5e5;
+    /* color: #e5e5e5; */
+    color: white;
 
 }
 .landing-btns button:hover{
     background-color: white;
-    color: black;
+    /* color: black; */
+    color: #4361ee;
     /* border: black; */
+    border-color: #4361ee;
 }
 .card-container-landing {
     display: flex;
     flex-direction: row;
-    gap: 40px;
+    gap: 60px;
 }
 .card {
-    background-color: #f1faee;
+    background-color:white;
     width: 350px;
     height: 250px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 .landing-demo-button {
     margin: auto;
@@ -234,25 +273,26 @@ color: #e5e5e5;
     /* width: 100%; */
     /* background-color: #4361ee;
      */
-    font-family: 'Pacifico', cursive;
-    background-color: black;
+    /* font-family: 'Pacifico', cursive; */
+    background-color: #4361ee;
     border: 1px solid white;
     height: 35px;
     font-size: 16px;
     letter-spacing: 1px;
-    color: #e5e5e5;
+    color: white;
     margin-top: 5px;
     border-radius: 3px;
     cursor: pointer;
     margin: auto;
-    margin-bottom: 30px;
+    margin-bottom: 40px;
     transition: .3s;
 
 
 }
 .landing-demo-button button:hover {
     background-color: white;
-    color: black;
+    color: #4361ee;
+    border-color: #4361ee;
 }
 
 @media screen and (max-width:1160px) {
@@ -291,6 +331,12 @@ color: #e5e5e5;
     }
     
 }
+@media screen and (max-width:725px ) {
+    .landing-heading {
+        font-size: 22px;
+    }
+    
+}
 
 @media screen and (max-width:505px) {
     .landing-body-content {
@@ -304,6 +350,9 @@ color: #e5e5e5;
         /* background-color: teal; */
         justify-content: center;
         align-items: center;
+    }
+    .card {
+        width: 95%;
     }
 
 }
