--- a/react-app/src/components/Navigation/ProfileButton.css
+++ b/react-app/src/components/Navigation/ProfileButton.css
@@ -4,7 +4,8 @@
     padding-top: 3px;
     padding-bottom: 3px;
     background-color:#4361ee;
-    border: none;
+    /* border: none; */
+    border: 1px solid white;
     color: white;
     font-size: 13px;
     border-radius: 3px;
@@ -13,7 +14,13 @@
     align-items: center;
     letter-spacing: 1px;
     cursor: pointer;
+    height: 30px;
 
+}
+.profile-btn:hover {
+    background-color: white;
+    color: #4361ee;
+    border: 1px solid #4361ee;
 }
 .profile-down {
     margin-left: 3px;
@@ -36,9 +43,10 @@
     border-radius: 3px;
     border: none;
     font-size: 13px;
+    z-index: 150;
     /* background-color:#4362ee35 ; */
-    background-color: transparent;
-    color:#4361ee;
+    background-color: #ffbe0b;
+    color:#eaebf0;
     transition: .5s;
     cursor: pointer;
 }
@@ -49,9 +57,9 @@
     border: none;
     font-size: 13px;
     margin-top: 5px;
-    /* background-color:#4362ee35 ; */
-    background-color: transparent;
-    color:#4361ee;
+    background-color:#ffbe0b ;
+    /* background-color: transparent; */
+    color:#eaebee;
     transition: .5s;
     cursor: pointer;
 }
