--- a/react-app/src/components/Stats/app.css
+++ b/react-app/src/components/Stats/app.css
@@ -16,14 +16,12 @@
     /* justify-content: center; */
     /* align-items: center; */
 }
-.stats-fav-content {
-    width: 100%;
+/* .stats-fav-content {
     margin-top: 50px;
-    /* align-self: center; */
     background-color: white;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 
-} 
+}  */
 
 
 
