--- a/react-app/src/components/EditInterviewForm/app.css
+++ b/react-app/src/components/EditInterviewForm/app.css
@@ -19,8 +19,9 @@
 }
 .edit-int-post label {
     margin-left: 10px;
-    font-size: 10px;
+    font-size: 13px;
     margin-bottom: 5px;  
+    /* background-color: red; */
 }
 .edit-int-post input {
     width: 150px;
@@ -31,7 +32,7 @@
     border: 0.5px solid rgba(0, 0, 0, 0.174);
     border-radius: 2px;
     outline-color:#4361ee;
-    font-size: 12px;
+    font-size: 14px;
     letter-spacing: 1px;
     padding: 2px;
 }
@@ -40,8 +41,9 @@
     margin-left: 10px;
     height: 16px;
     letter-spacing: 1px;
-    font-size: 12px;
+    font-size: 15px;
     background-color: #caf0f863;
+    /* background-color: red; */
     border: 0.5px solid rgba(0, 0, 0, 0.174);
     border-radius: 2px; 
     outline-color: #4361ee;
@@ -55,7 +57,7 @@
 .edit-int-btn button {
     width: 70px;
     height: 20px;
-    font-size: 10px;
+    font-size: 13px;
     font-weight: 500;
     border: none;
     color: white;
