--- a/react-app/src/components/OpenModalButton/app.css
+++ b/react-app/src/components/OpenModalButton/app.css
@@ -6,7 +6,7 @@
   font-size: large;
   height: 100%;
   width: 100%;
-  /* background: transparent; */
+  background: transparent;
   /* border: 1px solid white; */
 
 }
