--- a/react-app/src/components/InterviewForm/app.css
+++ b/react-app/src/components/InterviewForm/app.css
@@ -73,6 +73,18 @@
     font-size: 14px;
     margin-bottom: 5px;
 }
+.cre-int-pos-cont select {
+    width: 150px;
+    margin-left: 10px;
+    height: 20px;
+    letter-spacing: 1px;
+    font-size: 14px;
+    background-color: #4362ee1c;
+    border: 0.5px solid rgba(0, 0, 0, 0.174);
+    border-radius: 2px;
+    outline: none;
+
+}
 .cre-int-cont input {
     width: 150px;
     margin-left: 10px;
@@ -180,11 +192,15 @@
     display: flex;
     justify-content: center;
     /* background-color: red; */
-    width: 150px;
+    /* background-color: teal; */
+    width: 260px;
 }
 .cre-int-err-cont p {
     font-size: 14px;
-    width: 80%;
+    /* width: 80%;*/
+    width: fit-content;
+    /* background-color: blue; */
+
     width: 300px;
 
 }
@@ -225,7 +241,7 @@
     
     
   }
-  @media screen and (max-width: 430px) {
+  @media screen and (max-width: 622px) {
     .cre-int-form-cont {
         /* background-color: green; */
         display: flex;
