--- a/react-app/src/components/LandingPage/app.css
+++ b/react-app/src/components/LandingPage/app.css
@@ -46,7 +46,9 @@
     /* display: inline-block; */
 }
 .card-social {
-    border-top: 4px solid #4361ee;
+    /* border-top: 4px solid rgb(67, 97, 238); */
+    box-shadow: 0 0 0 2px #7209b7, 8px 8px 0 0 #7209b7;
+    
 }
 .card-img-job {
     width: 75px;
@@ -82,7 +84,8 @@
     align-items: center;
 }
 .card-work {
-    border-top: 4px solid #fcbf49;
+    /* border-top: 4px solid rgb(252, 191, 73); */
+    box-shadow: 0 0 0 2px rgb(252, 191, 73), 8px 8px 0 0 rgb(252, 191, 73);
 }
 
 .land-main-cion {
@@ -125,6 +128,7 @@ color: white;
     width: 400px;
     margin-bottom: 10px;
     /* background-color: teal; */
+    /* color: red; */
 
 }
 
@@ -219,7 +223,7 @@ color: white;
     background-color:white;
     width: 350px;
     height: 250px;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    /* box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px; */
 }
 .landing-demo-button {
     margin: auto;
@@ -242,7 +246,8 @@ color: white;
     /* border-top: 4px solid #e63946; */
 }
 .card-calander {
-    border-top: 4px solid #e63946;
+    /* border-top: 4px solid #e63946; */
+    box-shadow: 0 0 0 2px rgba(218,102,123,1), 8px 8px 0 0 rgba(218,102,123,1);
 }
 .card-img-cont {
     display: flex;
@@ -258,6 +263,7 @@ color: white;
 }
 .card-cont h1 {
     color:#415a77 ;
+    font-size: 30px;
     letter-spacing: 1px;
 }
 .card-cont p {
