--- a/react-app/src/components/SingleUser/app.css
+++ b/react-app/src/components/SingleUser/app.css
@@ -1,5 +1,7 @@
 .no-user-int-cont {
-    max-width: 300px;
+    /* max-width: 300px; */
+    /* width: fit-content; */
+    width: 100%;
     margin: auto;
     display: flex;
     justify-content: center;
@@ -22,9 +24,10 @@
 }
 .single-user-name {
     font-weight: 600;
-    background-color: #4361ee;
-    color: white;
-    width: 80%;
+    /* background-color: #4361ee; */
+    color: black;
+    /* color: white; */
+    width: fit-content;
     margin: auto;
     margin-bottom: 10px;margin-top: 5px;
 
@@ -42,6 +45,7 @@
     margin: auto;
     /* margin-top: 20px; */
     background-color: #4362ee1c;
+    gap: 40px;
     /* background-color: teal; */
     /* margin-top: 100px; */
 }
@@ -69,10 +73,11 @@
 }
 .single-user-career  {
     font-weight: 600;
-    background-color: #4361ee;
-    color: white;
+    /* background-color: #4361ee; */
+    /* color: white; */
+    color: black;
     /* width: fit-content; */
-    width: 150px;
+    width: fit-content;
     /* margin-right: 50%; */
     margin: auto;
 }
@@ -93,9 +98,13 @@
     background-color: #4362ee1c;
 }
 @media screen and (max-width:700px ) {
+    .single-user-main-cont {
+        height: fit-content;
+    }
     .single-usr-prfile-cont {
-        background-color: red;
+        /* background-color: red; */
         flex-direction: column;
+        /* height: fit-content; */
         width: 80%;
 
     }
