--- a/react-app/src/components/UserProfile/app.css
+++ b/react-app/src/components/UserProfile/app.css
@@ -14,6 +14,10 @@
     gap: 20px;
     /* justify-content: space-around; */
 }
+.user-profile-image-inner {
+    width: 200px;
+    height: 300px;
+}
 .edit-profile-pic-btn {
     width: 100%;
     /* background-color: blue; */
@@ -152,7 +156,7 @@
     /* background-color: blue; */
     display: flex;
     flex-direction: column;
-    height: 300px;
+    height: 330px;
     align-items: center;
     /* margin-top: 66px; */
 
