--- a/react-app/src/components/testGraph/app.css
+++ b/react-app/src/components/testGraph/app.css
@@ -1,6 +1,13 @@
 
 .App {
     background-color: white;
-    height: 100%;
+    /* height: 400px; */
     padding: 5px;
+    background-color: red;
+}
+
+@media screen and (max-width: 570px) {
+    .graphs-btns {
+        width: 95%;
+    }
 }
