--- a/react-app/src/components/AllInterviewContainer/app.css
+++ b/react-app/src/components/AllInterviewContainer/app.css
@@ -381,7 +381,7 @@
     }
     .int-search-body {
         flex-direction: column;
-        background-color: red;
+        /* background-color: red; */
         
         /* justify-content: center; */
         /* align-items: center; */
