--- a/react-app/src/components/UserProfile/app.css
+++ b/react-app/src/components/UserProfile/app.css
@@ -1,6 +1,6 @@
 #user-profile {
-    /* background-color: red; */
     background-color: transparent;
+    /* background-color: red; */
     display: flex;
     width: 40vw;
     /* height: inherit; */
@@ -14,9 +14,10 @@
     gap: 20px;
     /* justify-content: space-around; */
 }
-.user-profile-image-inner {
-    width: 200px;
+#user-profile-image-inner {
+    width: 90%;
     height: 300px;
+    margin-top: 5px;
 }
 .edit-profile-pic-btn {
     width: 100%;
@@ -153,11 +154,15 @@
 .user-profile-img {
     /* background-color: red; */
     background-color: white;
+    width: 300px;
     /* background-color: blue; */
     display: flex;
     flex-direction: column;
-    height: 330px;
+
+    height: 400px;
     align-items: center;
+    border-radius: 5px;
+    border-bottom: 2px solid #4361ee;
     /* margin-top: 66px; */
 
 
